# CoffeeGPT2

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  data.dvc  mypy.ini  nbqa.ini  pyproject.toml  requirements.txt
notebooks/model_dev/: data_pipeline_testing.ipynb
src/data_functions/: load.py  process.py  scalers.py
src/pipelines/: data_pipeline.py
